fix(modal): add dark mode variables (#747)

--- a/tegel/src/components/modal/modal.scss
+++ b/tegel/src/components/modal/modal.scss
@@ -117,7 +117,7 @@ $modals: (
   padding-bottom: var(--sdds-spacing-element-8);
   position: sticky;
   top: 0;
-  background-color: var(--sdds-modal-bg);
+  background-color: var(--sdds-modal-background);
   z-index: 1;
 
   &::before {
@@ -126,11 +126,12 @@ $modals: (
     height: 16px;
     top: -16px;
     width: 100%;
-    background-color: var(--sdds-modal-bg);
+    background-color: var(--sdds-modal-background);
   }
 }
 
 @mixin modal-headline {
+  color: var(--sdds-modal-text);
   font: var(--sdds-headline-05);
   letter-spacing: var(--sdds-headline-05-ls);
   margin: 0;
@@ -138,6 +139,7 @@ $modals: (
 }
 
 @mixin modal-body {
+  color: var(--sdds-modal-text);
   font: var(--sdds-body-01);
   letter-spacing: var(--sdds-body-01-ls);
   padding-bottom: 40px;
@@ -155,13 +157,14 @@ $modals: (
 .sdds-modal {
   @include sdds-box-sizing;
 
-  background-color: var(--sdds-modal-bg);
+  background-color: var(--sdds-modal-background);
   margin: auto;
   position: relative;
   border-radius: 4px;
   padding: 16px;
   max-height: 85vh;
   overflow-y: auto;
+  
   @include modal-scroll-outer;
 
   &__actions-sticky {
@@ -181,7 +184,7 @@ $modals: (
       bottom: 0;
       left: 0;
       right: 0;
-      background-color: var(--sdds-modal-bg);
+      background-color: var(--sdds-modal-background);
       padding: var(--sdds-spacing-element-16);
       display: flex;
       gap: 16px;
@@ -190,7 +193,7 @@ $modals: (
 
   &__actions-static {
     .sdds-modal-actions {
-      background-color: var(--sdds-modal-bg);
+      background-color: var(--sdds-modal-background);
       display: flex;
       gap: 16px;
     }
@@ -228,6 +231,7 @@ $modals: (
 
 .sdds-modal-headline {
   @include modal-headline;
+  color: var(--sdds-modal-text);
 }
 
 .sdds-modal-body {
@@ -242,7 +246,7 @@ $modals: (
   display: inline-block;
   width: 16px;
   height: auto;
-  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M3.40338 2.34308C3.11048 2.05019 2.63561 2.05019 2.34272 2.34308C2.04982 2.63598 2.04982 3.11085 2.34272 3.40374L6.93897 8L2.34283 12.5961C2.04994 12.889 2.04994 13.3639 2.34283 13.6568C2.63572 13.9497 3.1106 13.9497 3.40349 13.6568L7.99963 9.06066L12.5958 13.6568C12.8887 13.9497 13.3635 13.9497 13.6564 13.6568C13.9493 13.3639 13.9493 12.889 13.6564 12.5961L9.06029 8L13.6565 3.40376C13.9494 3.11086 13.9494 2.63599 13.6565 2.3431C13.3636 2.0502 12.8888 2.0502 12.5959 2.3431L7.99963 6.93934L3.40338 2.34308Z' fill='%23171719'/%3E%3C/svg%3E%0A");
+  background-image: var(--sdds-modal-icon-native);
   background-repeat: no-repeat;
   cursor: pointer;
 
@@ -255,6 +259,24 @@ $modals: (
   }
 }
 
+//web component with nested svg
+.sdds-modal-close-btn {
+  display: inline-block;
+  height: auto;
+   background-repeat: no-repeat;
+  cursor: pointer;
+
+  @media (min-width: $screen-s) {
+    margin-left: var(--sdds-spacing-element-16);
+  }
+
+  @media (min-width: $screen-l) {
+    margin-left: var(--sdds-spacing-element-48);
+  }
+  svg{
+    fill: var(--sdds-modal-icon);
+  }
+}
 .sdds-modal-overflow {
   overflow: hidden;
 }
@@ -271,6 +293,11 @@ $modals: (
     /* &:focus {
       //@include sdds-focus-state; FIXME: THIS INCLUDE IS NOT WORKING
     } */
+  }
+  .sdds-modal-close-btn {
+    border: none;
+    background-color: transparent;
+
   }
 }
 
